<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Slider01Activity"
    android:background="@drawable/slider_background"
    android:padding="25dp"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        >


        <TextView
            android:id="@+id/skipBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textSize="20sp"
            android:textColor="@color/primaryColor"
            android:layout_marginEnd="10dp"
            app:drawableRightCompat="@drawable/arrow_right"
            android:layout_gravity="end"
            />

        <ImageView
            android:id="@+id/doctorTeam"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:contentDescription="@string/empty"
            android:src="@drawable/doctor_team"
            />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/dotsArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        >


        <ImageView
            android:id="@+id/blackDot01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/black_dot"
            android:contentDescription="@string/empty"
            />


        <ImageView
            android:id="@+id/blackDot02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gray_dot"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:contentDescription="@string/empty"

            />


        <ImageView
            android:id="@+id/blackDot03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gray_dot"
            android:contentDescription="@string/empty"

            />




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_doctors"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/secondaryColor"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_list_of_the_best_doctors_nearby_you"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/primaryColor"
            android:layout_marginBottom="45dp"
            />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:layout_marginBottom="30sp"
            android:background="@drawable/round_button"
            />


        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:backgroundTint="#00FFFFFF"
            />


    </LinearLayout>



</LinearLayout>